1/23/24 - Created Repository

1/25/24 - Ross practiced creating ML models with data built into R. These went into the "Practicing" folder